refactor: newInstance() 已弃用,使用clazz.getDeclaredConstructor().newInstance()